# weatherlink2pg

./: .env.sample  .gitignore  .pre-commit-config.yaml  =2.9.3  CHANGELOG.md  Codes.ipynb  LPO_Historique.ipynb  LPO_Routine.ipynb  README.md  Script_Historique.py  Script_OneForAll.py  Script_Routine.py  pyproject.toml  script_click.py  script_global.py  script_historique.py  script_routine.py
.github/ISSUE_TEMPLATE/: 10_bug_report.yml  config.yml
.github/workflows/: checks.yml  documentation.yml
.ipynb_checkpoints/: LPO_Historique-checkpoint.ipynb
Notebooks/: LPO_Historique.ipynb  LPO_OneForAll.ipynb  LPO_Routine.ipynb
ScriptsPython/: Script_Routine.py
docs/: conf.py  index.md
docs/source/: conf.py  index.md  installation.md
scripts/: script_def.py  script_main.py
src/weatherlink2pg/: helpers.py  main.py
